Ports/jdk/jdk-jdk-18-10/test/langtools/tools/javac/enum/FauxSpecialEnum2.out
FauxSpecialEnum2.java:12:5: compiler.err.does.not.override.abstract: compiler.misc.anonymous.class: FauxSpecialEnum2$1, test(), compiler.misc.anonymous.class: FauxSpecialEnum2$1
1 error
